--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "mammoth": "^1.11.0",
     "next": "16.1.1",
     "pdf-lib": "^1.17.1",
-    "pdfjs-dist": "^5.4.530",
+    "pdfjs-dist": "4.10.38",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-dropzone": "^14.3.8",
